# gmail-obsidian-integration

./: .env.example  .gitignore  PROJECT-SPEC.MD  Procfile  README.md  alembic.ini  backfill_company_news.py  desktop_widget_local.html  generate_vault.py  generate_voice_profile.py  monitor_scan.py  monitor_scan.sh  process_existing_emails.py  pyproject.toml  quick_vault_generator.py  requirements.txt  setup_dev.sh  spawn_personal_workers.py  start_scan.py  test_account_order.py  test_resume_logic.py  trigger_body_backfill.py  widget_server.py
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 20260225_initial_schema.py  20260301_add_email_body.py  20260304_1709_ef8b3c88b002_add_linkedin_url_to_contacts.py  20260305_0600_a1b2c3d4e5f6_add_linkedin_url_to_companies.py  20260305_0730_b2c3d4e5f6a7_add_enrichment_status_to_contacts.py  20260305_0800_c3d4e5f6a7b8_add_work_type_to_companies.py  20260305_0830_d4e5f6a7b8c9_add_discovered_contacts.py  20260310_0100_p6q7r8s9t0u1_add_trigger_type_job_change_drafts.py  20260310_0200_q7r8s9t0u1v2_add_match_confidence.py
scripts/enrichment/: __init__.py  __main__.py  browser.py  crm_client.py  human_behavior.py  leadership_discoverer.py  leadership_url_discoverer.py  linkedin_enricher.py  llm_leadership_finder.py  logo_utils.py  logo_verifier.py  state.py
src/api/: main.py
src/core/: config.py  database.py  logging.py  utils.py
src/models/: __init__.py  account.py  base.py  company.py  company_news.py  contact.py  contact_enrichment.py  discovered_contact.py  (+7 more)
supabase/: config.toml
tests/: conftest.py
(+75 files in other folders)
